--- a/src/styles/_layouts.scss
+++ b/src/styles/_layouts.scss
@@ -1,3 +1,5 @@
+@use "./variables/colors";
+
 .container {
     max-width: 1000px;
     margin: 0 auto;
@@ -6,6 +8,10 @@
 
 .main-header {
     margin-bottom: 40px;
+    position: sticky;
+    top: 0;
+    z-index: 10;
+    background: colors.$white;
 }
 
 @mixin flex-all {
