--- a/src/styles/components/_CartDropdown.scss
+++ b/src/styles/components/_CartDropdown.scss
@@ -6,11 +6,13 @@
     color: colors.$dark-gray;
     cursor: pointer;
     text-decoration: none;
+    flex: 0;
 }
 
 .cart-dropdown-label {
     font-size: 20px;
     font-weight: 600;
+    position: relative;
 }
 
 .cart-dropdown-total {
@@ -26,4 +28,37 @@
     background: colors.$orange;
     color: colors.$white;
     text-align: center;
+}
+
+@keyframes drop {
+    0% {
+        opacity: 0;
+        top: -30px;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+        top: -5px;
+    }
+}
+
+.cart-dropdown-anim-box {
+    pointer-events: none;
+    width: 10px;
+    height: 10px;
+    background: colors.$orange;
+    position: absolute;
+    left: 40%;
+    transform: translateX(-50%);
+    top: -30px;
+    opacity: 0;
+    transform: rotate(25deg);
+
+    &.animating {
+        animation-name: drop;
+        animation-duration: 0.5s;
+        animation-timing-function: ease;
+    }
 }
