--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@
 
 // Pages
 @use "./pages/Products";
+@use "./pages/Cart";
 
 // Components
 @use "./components/CartDropdown";
@@ -14,4 +15,9 @@
     font-size: 20px;
     color: colors.$dark-gray;
     cursor: pointer;
+}
+
+a {
+    text-decoration: none;
+    color: colors.$orange;
 }
