--- a/src/styles/pages/_Products.scss
+++ b/src/styles/pages/_Products.scss
@@ -10,7 +10,6 @@
 .product-card {
     border: 2px dotted transparent;
     border-radius: 15px;
-    cursor: pointer;
     padding: 20px;
     position: relative;
 }
@@ -77,7 +76,7 @@
     }
 
     &:hover {
-        padding: 10px 12px;
+        padding: 8px 12px;
     }
 
     &:active {
@@ -99,4 +98,24 @@
     display: block;
     margin: 0 auto;
     transition: height ease-out 0.3s;
+}
+
+@keyframes pulse {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0.4;
+    }
+}
+
+.product-card-skeleton {
+    background: colors.$light-gray;
+    border-radius: 15px;
+    height: 338px;
+    animation-name: pulse;
+    animation-duration: 0.3s;
+    animation-timing-function: ease;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
 }
