--- a/src/styles/pages/_Products.scss
+++ b/src/styles/pages/_Products.scss
@@ -1,10 +1,24 @@
 @use "../variables/colors";
+@use "../variables/breakpoints";
 
 .product-grid {
     display: grid;
     grid-template-columns: repeat(4, minmax(0, 1fr));
     gap: 30px;
     width: 100%;
+
+    @media only screen and (max-width: breakpoints.$md) {
+        grid-template-columns: repeat(3, minmax(0, 1fr));
+        gap: 10px;
+    }
+
+    @media only screen and (max-width: breakpoints.$sm) {
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+
+    @media only screen and (max-width: breakpoints.$xs) {
+        grid-template-columns: 1fr;
+    }
 }
 
 .product-card {
@@ -81,6 +95,12 @@
 
     &:active {
         padding: 6px 10px;
+    }
+
+    @media only screen and (max-width: breakpoints.$sm) {
+        top: 60%;
+        opacity: 1;
+        pointer-events: all;
     }
 }
 
