--- a/src/styles/components/_CartDropdown.scss
+++ b/src/styles/components/_CartDropdown.scss
@@ -7,6 +7,14 @@
     cursor: pointer;
     text-decoration: none;
     flex: 0;
+    padding: 0 10px;
+    border: 1px solid transparent;
+    transition: all ease 0.1s;
+
+    &:hover {
+        border-color: colors.$light-gray;
+        border-radius: 10px;
+    }
 }
 
 .cart-dropdown-label {
