--- a/src/styles/pages/_Cart.scss
+++ b/src/styles/pages/_Cart.scss
@@ -14,10 +14,7 @@
         padding: 15px;
         width: fit-content;
         white-space: nowrap;
-    }
-
-    td {
-        border-top: 1px solid colors.$light-gray;
+        border-bottom: 1px solid colors.$light-gray;
     }
 
     td {
@@ -29,6 +26,10 @@
             display: flex;
             align-items: center;
         }
+    }
+
+    tfoot td {
+        border-top: 1px solid colors.$light-gray;
     }
 
     .text-center {
@@ -54,13 +55,11 @@
         padding: 0;
         transition: all ease 0.1s;
         text-align: left;
+        display: flex;
+        justify-content: center;
 
         &:hover {
             color: colors.$red;
         }
-    }
-
-    tfoot td {
-        border-top: 1px solid colors.$light-gray;
     }
 }
